completed video listing and showing a video

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "Button Sample",
-  "description": "A barebones Node.js app using Express 4",
+  "name": "Video upload with Panda",
+  "description": "Basic example",
   "repository": "https://github.com/heroku/button-sample",
   "logo": "http://node-js-sample.herokuapp.com/node.svg",
   "keywords": ["node", "express", "static"]
