--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "node-js-sample",
+  "name": "video-upload-sample",
   "version": "0.1.0",
-  "description": "A sample Node.js app using Express 4",
+  "description": "A sample Node.js app to upload videos using Panda",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.0.0",
-    "ejs": "~1.0.0"
+    "body-parser": "^1.10.0",
+    "ejs": "~1.0.0",
+    "express": "^4.10.6",
+    "panda": "^0.1.25"
   },
   "engines": {
     "node": "0.10.x",
@@ -16,16 +18,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/heroku/node-js-sample"
+    "url": "https://github.com/chrishedgate/video-upload-sample"
   },
   "keywords": [
     "node",
     "heroku",
     "express"
   ],
-  "author": "Mark Pundsack",
-  "contributors": [
-    "Zeke Sikelianos <zeke@sikelianos.com> (http://zeke.sikelianos.com)"
-  ],
+  "author": "Chris Hedgate",
   "license": "MIT"
 }
