--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   },
   "dependencies": {
     "body-parser": "^1.10.0",
-    "ejs": "~1.0.0",
+    "ejs": "~>2.5.5",
     "express": "^4.10.6",
     "panda": "^0.1.25"
   },
   "engines": {
     "node": "0.10.x",
-    "ejs": "1.0.0"
+    "ejs": "2.5.5"
   },
   "repository": {
     "type": "git",
